Homepage Masthead - fix photo grid height cutoff on mobile

--- a/app/assets/stylesheets/widgets/_ad_landing_page/masthead__virtual.scss
+++ b/app/assets/stylesheets/widgets/_ad_landing_page/masthead__virtual.scss
@@ -1,11 +1,12 @@
 /* autoprefixer grid: autoplace */
 .homepage-masthead__container {
+  --defaultPadding: 5%;
   --textShadow: rgba(0, 0, 0, 0.5) 6.5px 6.5px 13px;
   --videoHeight: 600px;
   width: 100vw;
-  // float: left;
-  // max-height: 80vh;
-  // background-color: $cu-red;
+
+
+
   height: -webkit-max-content;
   height: -moz-max-content;
   height: max-content;
@@ -15,21 +16,16 @@
   grid-gap: 25px;
   min-height: 800px;
 
-  .homepage-masthead__max-width {
-    // max-width: 1130px;
-    // z-index: 2;
-    // justify-content: center;
-  }
 
   .left {
     height: 100%;
-    width: 35%;
+    width: 3v(defaultPadding);
     float: left;
   }
 
   .right {
     height: 200px;
-    width: 35%;
+    width: 3v(defaultPadding);
     float: right;
   }
 
@@ -44,7 +40,6 @@
   }
 
   .red {
-    // background: linear-gradient(to bottom, #a50034 0%, #a50034 17%, #a50034 33%, #a50034 67%, #a50034 83%, #a50034 100%);
     background: v(cu-red);
   }
 
@@ -89,9 +84,6 @@
     &:focus,
     &:focus-within,
     &:hover {
-      // filter: drop-shadow(1px 0 2px var(--panther-black));
-      // color: v(panther-black);
-      // transform: translateY(-2px);
       transition: 150ms linear;
       fill-opacity: 1;
     }
@@ -160,19 +152,11 @@
   }
 
   &__button-container {
-    // display: grid;
-    // justify-items: center;
-    // position: absolute;
-    // grid-template-columns: repeat(3, 1fr);
-    // grid-template-rows: 1fr;
     display: -ms-grid;
     display: grid;
     justify-content: center;
     -ms-grid-columns: 1fr;
     grid-template-columns: 1fr;
-    // width: 1130px;
-    // max-width: 1130px;
-    // justify-self: center;
     width: 100vw;
     grid-gap: 12px;
     display: grid;
@@ -208,7 +192,6 @@
       &__button,
       .homepage a.button {
         --buttonMinWidth: 350px;
-        // min-width: v(buttonMinWidth);
         background: unset;
         display: -ms-grid;
         display: grid;
@@ -243,7 +226,6 @@
         }
 
         --animationDelay: 2.5s;
-        // --animation: backgroundColor;
         --animation: none;
         --animationIterationCount: infinite;
         --animationDuration: 30s;
@@ -254,9 +236,6 @@
           -webkit-animation: 26s infinite backgroundColor;
           animation: 26s infinite backgroundColor;
           background-color: v(cu-red);
-          // animation: v(animationDelay) v(animationIterationCount) v(animation);
-          // animation-delay: 2.5s;
-          // animation-fill-mode: forwards;
           color: v(white);
           transition: 300ms linear;
 
@@ -319,7 +298,7 @@
     -ms-grid-columns: 2fr 12px 1fr 12px 1fr 12px 1fr 12px 1fr;
     grid-template-columns: 2fr 1fr 1fr 1fr 1fr;
     -ms-grid-rows: 200px 12px 200px 12px 200px 12px 200px;
-    grid-template-rows: 200px 200px 200px 200px;
+    grid-template-rows: fit-content(100%);
     justify-content: space-around;
     grid-gap: 12px;
 
@@ -566,7 +545,7 @@
     -ms-grid-columns: 2fr 12px 1fr 12px 1fr 12px 1fr 12px 1fr;
     grid-template-columns: 2fr 1fr 1fr 1fr 1fr;
     -ms-grid-rows: 200px 12px 200px 12px 200px 12px 200px;
-    grid-template-rows: 200px 200px 200px 200px;
+    grid-template-rows: 1fr;
     justify-content: space-around;
     grid-gap: 12px;
 
@@ -680,7 +659,6 @@ video {
   height: 600px;
 }
 
-// attempt   2 with video as bg layer
 video {
   position: absolute;
   z-index: 1;
@@ -694,10 +672,6 @@ video {
   }
 }
 
-// .homepage-masthead__video--paused {
-//   filter: brightness(.5);
-//   transition: 150ms linear;
-// }
 
 /* master.css | http://localhost:5000/_assets/master.css */
 
@@ -717,7 +691,8 @@ video {
 
 .homepage-masthead__photo-grid-container {
   z-index: 2;
-  height: 500px;
+  height: 100%;
+  padding-bottom: v(defaultPadding);
 }
 
 .homepage-masthead__container {
@@ -737,8 +712,8 @@ video {
       &__heading-container,
       &__photo-grid,
       &__buttons {
-        padding-left: 5%;
-        padding-right: 5%;
+        padding-left: v(defaultPadding);
+        padding-right: v(defaultPadding);
       }
     }
   }
@@ -931,7 +906,7 @@ video {
 
   .col-4 {
     float: left;
-    width: 25%;
+    width: 2v(defaultPadding);
   }
 
   .ie__photo-grid {
